--- a/LoginPage.html
+++ b/LoginPage.html
@@ -32,5 +32,14 @@
       <p class="signup-link">Don't have an account? <a href="#">Sign up</a></p>
     </form>
   </div>
+  <nav> 
+    <div>
+      Additional Info:
+    </div>
+    <ul> 
+        <li><a href="#about">About</a></li> 
+        <li><a href="#contact">Contact</a></li> 
+    </ul> 
+</nav> 
 </body>
 </html>
