Cart initial update

--- a/cart.html
+++ b/cart.html
@@ -1,1 +1,28 @@
--- cart html file
+<!-- cart html file -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>BrickHub Cart</title>
+    <a href="">Home</a>
+    <!--<link rel="stylesheet" href="../assets/css/aboutMe.css"> -->
+  </head>
+  <body>
+    <h1>Your Cart</h1>
+    <main id="products"> 
+      <section class="product"> 
+          <h2>Product 1</h2> 
+          <img src="" alt="Product 1"> 
+          <p>Description of Product 1.</p> 
+          <p>Price:</p> 
+          <button>Remove from Cart</button> 
+      </section> 
+
+    </main> 
+
+    <footer> 
+      <p>&copy; 2025 BrickHub</p> 
+    </footer> 
+  </body>
+</html>
