changed cart css

--- a/cart.html
+++ b/cart.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BrickHub Cart</title>
-    <a href="">Home</a>
+    <link rel="stylesheet" href="styles.css">
     <!--<link rel="stylesheet" href="../assets/css/aboutMe.css"> -->
   </head>
   <body>
+    <header> 
+      <h1>BrickHub</h1> 
+  </header> 
+    <a href="https://google.com" class="button">Home</a>
     <h1>Your Cart</h1>
     <main id="products"> 
       <section class="product"> 
