--- a/LoginPage.html
+++ b/LoginPage.html
@@ -8,8 +8,11 @@
   <link rel="stylesheet" href="styles.css"> <!-- link to CSS file when done -->
 </head>
 <body>
+  <header> 
+    <h1>BrickHub</h1> 
+  </header> 
   <div class="login-container">
-    <h1>Welcome to BrickHub!</h1>
+    <!-- <h1>Welcome to BrickHub!</h1> -->
     <form action="#" method="post" class="login-form">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required>
@@ -41,5 +44,8 @@
         <li><a href="#contact">Contact</a></li> 
     </ul> 
 </nav> 
+<footer> 
+  <p>&copy; 2025 BrickHub</p> 
+</footer> 
 </body>
 </html>
