--- a/LoginPage.html
+++ b/LoginPage.html
@@ -30,7 +30,7 @@
       </div>
       <br>
 
-      <button type="submit">Login</button>
+      <a href="http://127.0.0.1:3000/LegoDudes/BrowsingPage.html" class="Login">login</a>
 
       <p class="signup-link">Don't have an account? <a href="#">Sign up</a></p>
     </form>
