Login and SignUp pages should be ok

--- a/SignUp.html
+++ b/SignUp.html
@@ -1,1 +1,44 @@
 <!-- SignUpPage html here -->
+<!-- HTML for login page -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Lego Store Login</title>
+  <link rel="stylesheet" href="styles.css"> 
+</head>
+<body>
+  <header> 
+    <h1>BrickHub Sign Up Page!</h1> 
+  </header>
+  <h3>
+    Enter Username and Password
+  </h2> 
+  <div class="login-container">
+    <!-- <h1>Welcome to BrickHub!</h1> -->
+    <form action="#" method="post" class="login-form">
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="username" required>
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required>
+      <br>
+      <br>
+      <a href="http://127.0.0.1:3000/LegoDudes/BrowsingPage.html" class="SignUp">Create Account</a>
+    </form>
+  </div>
+  <nav>
+    <br> 
+    <div>
+      Additional Info:
+    </div>
+    <ul> 
+        <li><a href="#about">About</a></li> 
+        <li><a href="#contact">Contact</a></li> 
+    </ul> 
+</nav> 
+<footer> 
+  <p>&copy; 2025 BrickHub</p> 
+</footer> 
+</body>
+</html>
