--- a/LoginPage.html
+++ b/LoginPage.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lego Store Login</title>
-  <link rel="stylesheet" href="styles.css"> <!-- link to CSS file when done -->
+  <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
   <header> 
@@ -19,6 +19,8 @@
     
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
+      <br>
+      <br>
       <div class="remember-user">
         <label>
           <input type="checkbox" name="remember"> Remember Me
@@ -30,9 +32,10 @@
       </div>
       <br>
 
-      <a href="http://127.0.0.1:3000/LegoDudes/BrowsingPage.html" class="Login">login</a>
+      <a href="http://127.0.0.1:3000/LegoDudes/BrowsingPage.html" class="login">Login</a>
 
-      <p class="signup-link">Don't have an account? <a href="#">Sign up</a></p>
+      <p class="signup-link">Don't have an account?     <a href="http://127.0.0.1:3000/LegoDudes/SignUp.html" class="SignUp">Create Account</a>
+      </p>
     </form>
   </div>
   <nav> 
