more linking done

--- a/BrowsingPage.html
+++ b/BrowsingPage.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header> 
-        <h1>BrickHub</h1> 
+        <h1>Welcome to BrickHub!</h1> 
     </header>
     <a href="http://127.0.0.1:3000/LegoDudes/cart.html" class="button">Check Out</a>    
     <main id="products"> 
