--- a/Forgot.html
+++ b/Forgot.html
@@ -10,7 +10,7 @@
   <header> 
     <h1>BrickHub</h1> 
   </header> 
-  <a href="" class="button">Home</a>
+  <a href="http://127.0.0.1:3000/LegoDudes/LoginPage.html" class="button">Back</a>
   <div class="login-container">
     <h1>Please enter email to reset password</h1>
     <form action="#" method="post" class="login-form">
