--- a/LoginPage.html
+++ b/LoginPage.html
@@ -27,14 +27,12 @@
         </label>
       </div>
       <br>
-      <div class ="forgot-password">
-        <a href="#">Forgot Password?</a>
-      </div>
+      <a href="http://127.0.0.1:3000/LegoDudes/Forgot.html" class="Forgot">Forgot Password?</a>
       <br>
-
+      <br>
       <a href="http://127.0.0.1:3000/LegoDudes/BrowsingPage.html" class="login">Login</a>
 
-      <p class="signup-link">Don't have an account?     <a href="http://127.0.0.1:3000/LegoDudes/SignUp.html" class="SignUp">Create Account</a>
+      <p class="signup-link">Don't have an account? <a href="http://127.0.0.1:3000/LegoDudes/SignUp.html" class="SignUp">Create Account</a>
       </p>
     </form>
   </div>
@@ -43,7 +41,7 @@
       Additional Info:
     </div>
     <ul> 
-        <li><a href="#about">About</a></li> 
+        <li><a href="#about">About</a></li> <!-- Place holder links for later-->
         <li><a href="#contact">Contact</a></li> 
     </ul> 
 </nav> 
