--- a/Forgot.html
+++ b/Forgot.html
@@ -17,7 +17,7 @@
       <label for="email">email:</label>
       <input type="text" id="email" name="email" required>
 
-      <button type="submit">Submit</button>
+      <a href="http://127.0.0.1:3000/LegoDudes/Verification.html" class="Submut">Submit</a>
 
     </form>
   </div>
