adding admin page

--- a/admin.html
+++ b/admin.html
@@ -1,1 +1,40 @@
 <!-- Admin Page -->
+<!DOCTYPE html>
+<html lang = "en">
+<head> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Admin Page</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <nav>
+        <a href="LoginPage.html">Logout</a>
+    </nav>
+
+    <h1>Admin Dashboard</h1>
+    <p>Lego Inventory</p>
+
+    <div class = "admin stuff">
+        <button onclick="displayTable()">Display Table</button>
+        <button onclick="truncateTable()">Truncate Table</button>
+        <button onclick="insertData()">Insert Data</button>
+    </div>
+
+    <div id="table">
+        <p>Table Data Here</p>
+    </div>
+
+    <script>
+        function displayTable() {
+            alert("Data from table here");
+        }
+        function truncateTable() {
+            alert("Data from table here");
+        }
+        function insertData() {
+            alert("Data from table here");
+        }
+    </script>
+</body>
+</html>
