--- a/LoginPage.html
+++ b/LoginPage.html
@@ -27,12 +27,12 @@
         </label>
       </div>
       <br>
-      <a href="http://127.0.0.1:3000/LegoDudes/Forgot.html" class="Forgot">Forgot Password?</a>
+      <a href="Forgot.html" class="Forgot">Forgot Password?</a>
       <br>
       <br>
-      <a href="http://127.0.0.1:3000/LegoDudes/BrowsingPage.html" class="login">Login</a>
+      <a href="BrowsingPage.html" class="login">Login</a>
 
-      <p class="signup-link">Don't have an account? <a href="http://127.0.0.1:3000/LegoDudes/SignUp.html" class="SignUp">Create Account</a>
+      <p class="signup-link">Don't have an account? <a href="SignUp.html" class="SignUp">Create Account</a>
       </p>
     </form>
   </div>
