--- a/cart.html
+++ b/cart.html
@@ -12,7 +12,7 @@
     <header> 
       <h1>BrickHub</h1> 
   </header> 
-    <a href="http://127.0.0.1:3000/LegoDudes/BrowsingPage.html" class="button">Home</a>
+    <a href="BrowsingPage.html" class="button">Home</a>
     <h1>Your Cart</h1>
     <main id="products"> 
       <section class="product"> 
