--- a/BrowsingPage.html
+++ b/BrowsingPage.html
@@ -11,7 +11,7 @@
     <header> 
         <h1>Welcome to BrickHub!</h1> 
     </header>
-    <a href="http://127.0.0.1:3000/LegoDudes/cart.html" class="button">Check Out</a>    
+    <a href="cart.html" class="button">Check Out</a>    
     <main id="products"> 
         <section class="product"> 
             <h2>Product 1</h2> 
