--- a/SignUp.html
+++ b/SignUp.html
@@ -24,7 +24,7 @@
       <input type="password" id="password" name="password" required>
       <br>
       <br>
-      <a href="http://127.0.0.1:3000/LegoDudes/BrowsingPage.html" class="SignUp">Create Account</a>
+      <a href="BrowsingPage.html" class="SignUp">Create Account</a>
     </form>
   </div>
   <nav>
