--- a/LoginPage.html
+++ b/LoginPage.html
@@ -14,7 +14,7 @@
   <h3>Enter Username and Password</h3>
 
   <div class="login-container">
-    <form class="login-form">
+    <form action="/auth" method="post" class="login-form">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required><br><br>
 
