--- a/Frontend/Public/Forgot.html
+++ b/Frontend/Public/Forgot.html
@@ -10,14 +10,14 @@
   <header> 
     <h1>BrickHub</h1> 
   </header> 
-  <a href="http://127.0.0.1:3000/LegoDudes/LoginPage.html" class="button">Back</a>
+  <a href="LoginPage.html" class="button">Back</a>
   <div class="login-container">
     <h1>Please enter email to reset password</h1>
     <form action="#" method="post" class="login-form">
       <label for="email">email:</label>
       <input type="text" id="email" name="email" required>
 
-      <a href="http://127.0.0.1:3000/LegoDudes/Verification.html" class="Submut">Submit</a>
+      <a href="Verification.html" class="Submut">Submit</a>
 
     </form>
   </div>
