--- a/Frontend/Public/LoginPage.html
+++ b/Frontend/Public/LoginPage.html
@@ -13,7 +13,7 @@
   </header> 
   <div class="login-container">
     <!-- <h1>Welcome to BrickHub!</h1> -->
-    <form action="http://localhost:5050/auth" method="post" class="login-form">
+    <form class="login-form">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required>
     
