--- a/Frontend/Public/LoginPage.html
+++ b/Frontend/Public/LoginPage.html
@@ -55,7 +55,7 @@
     const username = document.getElementById('username').value;
     const password = document.getElementById('password').value;
   
-    const res = await fetch('http://localhost:5050/auth', {
+    const res = await fetch('/api/auth', {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify({ username, password })
