--- a/Frontend/Public/admin.html
+++ b/Frontend/Public/admin.html
@@ -19,7 +19,7 @@
         <form id="displayForm">
             <input type="text" id="tableName" placeholder="Table Name" required>
             <input type="number" id="size" placeholder="Size" required>
-            <button onclick="displayTable()">Display Table</button>
+            <button type="submit">Display Table</button>
         </form>
 
         <br>
@@ -62,7 +62,7 @@
             const tableName = document.getElementById('tableName').value;
             const size = document.getElementById('size').value;
 
-            fetch(`/display?table=${tableName}&limit=${size}`, {
+            fetch(`/api/display?table=${tableName}&limit=${size}`, {
                 method: 'GET',
                 mode: 'cors',
                 credentials: 'include'
@@ -104,7 +104,7 @@
         });
 
         function truncateTable() {
-            fetch('/truncate', {
+            fetch('/api/truncate', {
                 method: 'POST',
                 mode: 'cors',
                 credentials: 'include'
@@ -132,7 +132,7 @@
                 cartid: document.getElementById('cartid').value || null  // optional
             };
 
-            fetch('/insert', {
+            fetch('/api/insert', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify(data)
@@ -154,7 +154,7 @@
         const tableName = document.getElementById('dropTableName').value;
 
         if (confirm(`Are you sure you want to DROP the table '${tableName}'?`)) {
-            fetch('/drop', {
+            fetch('/api/drop', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ tableName })
@@ -170,7 +170,7 @@
         e.preventDefault();
         const tableSQL = document.getElementById('createTableSQL').value;
 
-        fetch('/create', {
+        fetch('/api/create', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ tableSQL })
