--- a/Frontend/Public/SignUp.html
+++ b/Frontend/Public/SignUp.html
@@ -17,7 +17,7 @@
   </h2> 
   <div class="login-container">
     <!-- <h1>Welcome to BrickHub!</h1> -->
-    <form action="#" method="post" class="login-form">
+    <form class= "signup-form">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required>
       <label for="password">Password:</label>
@@ -40,5 +40,28 @@
 <footer> 
   <p>&copy; 2025 BrickHub</p> 
 </footer> 
+
+<script>
+  document.querySelector('.signup-form').addEventListener('submit', async function(e) {
+    e.preventDefault();
+  
+    const username = document.getElementById('username').value;
+    const password = document.getElementById('password').value;
+  
+    const res = await fetch('/api/sign', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ username, password })
+    });
+  
+    const text = await res.text();
+    if (res.ok && text.includes("Success")) {
+      window.location.href = 'BrowsingPage.html';  // client-side redirect
+    } else {
+      alert(text);
+    }
+  });
+  </script>
+
 </body>
 </html>
