--- a/Frontend/Public/SignUp.html
+++ b/Frontend/Public/SignUp.html
@@ -17,9 +17,11 @@
   </h2> 
   <div class="login-container">
     <!-- <h1>Welcome to BrickHub!</h1> -->
-    <form class= "signup-form">
+    <form class= "signup-form" onsubmit="register(event)">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
       <br>
@@ -40,28 +42,6 @@
 <footer> 
   <p>&copy; 2025 BrickHub</p> 
 </footer> 
-
-<script>
-  document.querySelector('.signup-form').addEventListener('submit', async function(e) {
-    e.preventDefault();
-  
-    const username = document.getElementById('username').value;
-    const password = document.getElementById('password').value;
-  
-    const res = await fetch('/api/sign', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ username, password })
-    });
-  
-    const text = await res.text();
-    if (res.ok && text.includes("Success")) {
-      window.location.href = 'BrowsingPage.html';  // client-side redirect
-    } else {
-      alert(text);
-    }
-  });
-  </script>
 
 </body>
 </html>
