--- a/Frontend/Public/SignUp.html
+++ b/Frontend/Public/SignUp.html
@@ -26,7 +26,7 @@
       <input type="password" id="password" name="password" required>
       <br>
       <br>
-      <a href="BrowsingPage.html" class="SignUp">Create Account</a>
+      <button type="submit">Login</button>
     </form>
   </div>
   <nav>
