--- a/Frontend/Public/BrowsingPage.html
+++ b/Frontend/Public/BrowsingPage.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang = "en">
 <head>
@@ -29,10 +28,11 @@
             <button>Add to Cart</button> 
         </section> 
       
-        <!-- Add more products as needed --> 
+         
     </main> 
     <footer> 
         <p>&copy; 2025 BrickHub</p> 
+        <a href="Logout.html">Logout</a>
     </footer> 
 </body> 
 </html> 
