--- a/Frontend/Public/SignUp.html
+++ b/Frontend/Public/SignUp.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lego Store Login</title>
   <link rel="stylesheet" href="styles.css"> 
+  <script src="register.js"></script> 
 </head>
 <body>
   <header> 
@@ -17,7 +18,7 @@
   </h2> 
   <div class="login-container">
     <!-- <h1>Welcome to BrickHub!</h1> -->
-    <form class= "signup-form" onsubmit="register(event)">
+    <form id="register-form" class="signup-form" onsubmit="register(event)">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required>
       <label for="email">Email:</label>
@@ -42,6 +43,5 @@
 <footer> 
   <p>&copy; 2025 BrickHub</p> 
 </footer> 
-
 </body>
 </html>
