--- a/Frontend/Public/LoginPage.html
+++ b/Frontend/Public/LoginPage.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lego Store Login</title>
-  <link rel="stylesheet" href="/styles.css"> 
+  <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
   <header> 
