--- a/Frontend/Public/LoginPage.html
+++ b/Frontend/Public/LoginPage.html
@@ -61,8 +61,8 @@
       body: JSON.stringify({ username, password })
     });
   
-    const text = await res.text();
-    if (res.ok && text.includes("Success")) {
+    const data = await res.json();
+    if (res.ok && data.success) {
       window.location.href = 'BrowsingPage.html';  // client-side redirect
     } else {
       alert(text);
