--- a/Frontend/Public/BrowsingPage.html
+++ b/Frontend/Public/BrowsingPage.html
@@ -13,18 +13,34 @@
     <a href="cart.html" class="button">Check Out</a>    
     <main id="products"> 
         <section class="product"> 
-            <h2>Product 1</h2> 
-            <img src="" alt="Product 1"> 
-            <p>Description of Product 1.</p> 
-            <p>Price:</p> 
+            <h2>AT-AT 1</h2> 
+            <img src="Images/atat.png" alt="Product 1"> 
+            <p>New Condition, Star Wars Series</p> 
+            <p>Price: $550.00</p> 
             <button onclick="addToCart(202)">Add to Cart</button>
         </section> 
          
         <section class="product"> 
-            <h2>Product 2</h2> 
-            <img src="" alt="Product 2"> 
-            <p>Description of Product 2.</p> 
-            <p>Price:</p> 
+            <h2>Avengers Tower</h2> 
+            <img src="Images/avengers.png" alt="Product 2"> 
+            <p>New Condition, Marvel Series</p> 
+            <p>Price: $400.00</p> 
+            <button onclick="addToCart(201)">Add to Cart</button>
+        </section> 
+
+        <section class="product"> 
+            <h2>Milenium Falcon</h2> 
+            <img src="Images/MF.png" alt="Product 2"> 
+            <p>Damaged Box, Star Wars Series</p> 
+            <p>Price: $150.00</p> 
+            <button onclick="addToCart(201)">Add to Cart</button>
+        </section> 
+
+        <section class="product"> 
+            <h2>The Office</h2> 
+            <img src="Images/office.png" alt="Product 2"> 
+            <p>Opened Box, Ideas Series</p> 
+            <p>Price: $90.00</p> 
             <button onclick="addToCart(201)">Add to Cart</button>
         </section> 
       
