--- a/Frontend/Public/cart.html
+++ b/Frontend/Public/cart.html
@@ -35,24 +35,27 @@
       }
   
       const data = await res.json();
-  
-      if (!data || !Array.isArray(data.items) || data.items.length === 0) {
-        main.innerHTML = '<p>Your cart is empty.</p>';
-      } else {
-        data.items.forEach(item => {
-          const section = document.createElement('section');
-          section.className = 'product';
-          section.innerHTML = `
-            <h2>${item.productname}</h2>
-            <img src="assets/images/placeholder.jpg" alt="${item.productname}" style="width:150px;height:auto;">
-            <p>Description of ${item.productname}.</p>
-            <p>Price: $${item.price}</p>
-            <p>Status: ${item.status}</p>
-          `;
-          main.appendChild(section);
-        });
+
+      if (!data.success || !Array.isArray(data.items) || data.items.length === 0) {
+        main.innerHTML = '<p>Inventory is empty.</p>';
+        return;
       }
-    }
+
+      data.items.forEach(item => {
+        const section = document.createElement('section');
+        section.className = 'product';
+        section.innerHTML = `
+          <h2>${item.productname}</h2>
+          <img src="/images/${item.image_filename || 'placeholder.jpg'}" alt="${item.productname}" style="width:150px;height:auto;">
+          <p>Status: ${item.status}</p>
+          <p>Price: $${item.price}</p>
+          <p>Status: ${item.status}</p>
+
+        `;
+        main.appendChild(section);
+      });
+
+      }
   
     window.onload = loadCart;
   </script>  
